Exploring and benchmarking VectorAPI